# ai-tutor-chatbot

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: __main__.py  chat.py  config.py  data_loader.py  embedding.py  routes.py
static/: styles.css
templates/: index.html
